# docs/swagger.json
@@ -17,6 +17,22 @@
                     "User"
                 ],
                 "summary": "Autenticar User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token do usuario",
+                        "name": "Token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"message\": \"Result\"}",
@@ -40,6 +56,29 @@
                     "User"
                 ],
                 "summary": "Criar um novo usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Nome do usuario",
+                        "name": "Name",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Senha do usuario",
+                        "name": "Password",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"message\": \"Result\"}",
@@ -63,6 +102,15 @@
                     "Login"
                 ],
                 "summary": "Desconectar o usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"message\": \"Result\"}",
@@ -86,6 +134,22 @@
                     "Login"
                 ],
                 "summary": "Conectar o usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Senha do usuario",
+                        "name": "Password",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"message\": \"Result\"}",
@@ -109,6 +173,15 @@
                     "User"
                 ],
                 "summary": "Criar token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"message\": \"Result\"}",
@@ -132,6 +205,15 @@
                     "User"
                 ],
                 "summary": "Buscar um usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email do usuario",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"message\": \"Result\"}",
